deploy/ngsa/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ngsa-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngsa-vs
spec:
  hosts:
  - "*"
  gateways:
  - ngsa-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ngsa
        port:
          number: 8080
